--- a/src/resources/locales/ru/translation.json
+++ b/src/resources/locales/ru/translation.json
@@ -18,7 +18,8 @@
     "edit": "Редактировать",
     "delete": "Удалить",
     "save": "Сохранить",
-    "cancel": "Отмена"
+    "cancel": "Отмена",
+    "list": "назад к списку"
   },
   "validation": {
     "NaN": "В поле '$t(field.{{path}})' можно вводить только числа",
@@ -26,6 +27,7 @@
     "positive": "В поле '$t(field.{{path}})' можно вводить только положительные числа",
     "maxError": "Значение поля '$t(field.{{path}})' не может быть больше, чем {{max}}",
     "eanRules": "Введенное значение не соответствует правилам EAN",
-    "required": "Поле '$t(field.{{path}})' обязательное"
+    "required": "Поле '$t(field.{{path}})' обязательное",
+    "minError": "Значение поля '$t(field.{{path}})' не может быть меньше, чем {{min}}"
   }
 }
