--- a/src/resources/locales/ru/translation.json
+++ b/src/resources/locales/ru/translation.json
@@ -19,7 +19,8 @@
     "delete": "Удалить",
     "save": "Сохранить",
     "cancel": "Отмена",
-    "list": "назад к списку"
+    "list": "назад к списку",
+    "new": "новый"
   },
   "validation": {
     "NaN": "В поле '$t(field.{{path}})' можно вводить только числа",
