--- a/src/resources/locales/ru/translation.json
+++ b/src/resources/locales/ru/translation.json
@@ -6,11 +6,11 @@
   "no": "Нет",
   "field": {
     "name": "Название",
-    "ean":  "EAN",
+    "ean": "EAN",
     "type": "Тип",
-    "weight":  "Вес",
-    "color":  "Цвет",
-    "active":  "Активный",
+    "weight": "Вес",
+    "color": "Цвет",
+    "active": "Активный",
     "quantity": "Количество",
     "price": "Цена"
   },
@@ -31,5 +31,26 @@
     "eanRules": "Введенное значение не соответствует правилам EAN",
     "required": "Поле '$t(field.{{path}})' обязательное",
     "minError": "Значение поля '$t(field.{{path}})' не может быть меньше, чем {{min}}"
+  },
+  "pagination": {
+    "rowsPerPage": "Продуктов на странице",
+    "of": "из"
+  },
+  "messages": {
+    "addSuccess": "Новый продукт добавлен в список",
+    "editSuccess": "Информация о продукте обновлена",
+    "removeSuccess": "Продукт EAN{{ean}} удален из списка",
+    "eanConflict": "Уже есть продукт с указанным EAN",
+    "notFound": "Продукт не найден"
+  },
+  "colors": {
+    "black": "черный",
+    "white": "белый",
+    "red": "красный",
+    "orange": "оранжевый",
+    "yellow": "желтый",
+    "green": "зеленый",
+    "blue": "синий",
+    "violet": "фиолетовый"
   }
 }
